Bug 165923 - FILEOPEN RTF Paragraph "auto" spacing before property is no longer overridden with DF
Summary: FILEOPEN RTF Paragraph "auto" spacing before property is no longer overridden...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2025-03-26 21:59 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-28 15:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (54.59 KB, application/msword)
2025-03-26 21:59 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the document in Word 2016 and Writer master (96.94 KB, image/png)
2025-03-26 22:00 UTC, Gabor Kelemen (Collabora)
Details
Another example file with fixed value of above spacing overridden (56.73 KB, application/msword)
2025-03-27 08:10 UTC, Gabor Kelemen (Collabora)
Details
The second example in Word and Writer (129.91 KB, image/png)
2025-03-27 09:19 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-03-26 21:59:55 UTC
Created attachment 200027 [details]
Example file from Word 2016

Attached example file has a paragraph with the "Spacing before" set to "auto" in its paragraph style, then overridden to 0 with direct formatting.

This override used to work, but now the paragraph is opened with 0.18 cm Above paragraph spacing.

1. Open attached file
-> the XXXX paragraph has Above paragraph spacing of 0.18 cm instead of 0.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a2741c9e6083016bba82fa9be06e157a18aaaf07
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Started with:

https://git.libreoffice.org/core/+/38464825c8c80eed0d9b328a89cd96eb27175a0e%5E%21

author	Oliver Specht <oliver.specht@cib.de>	Thu Feb 27 11:18:23 2025 +0100
committer	Gabor Kelemen <gabor.kelemen.extern@allotropia.de>	Fri Mar 07 15:45:20 2025 +0100

tdf#165483 style inherits only repated properties
Comment 1 Gabor Kelemen (Collabora) 2025-03-26 22:00:51 UTC
Created attachment 200028 [details]
Screenshot of the document in Word 2016 and Writer master
Comment 2 Gabor Kelemen (Collabora) 2025-03-27 08:10:12 UTC
Created attachment 200045 [details]
Another example file with fixed value of above spacing overridden
Comment 3 Gabor Kelemen (Collabora) 2025-03-27 09:19:05 UTC
Created attachment 200046 [details]
The second example in Word and Writer
Comment 4 Commit Notification 2025-03-27 21:18:24 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1a081416db0b89a392bcb187a9792b9b6fc75dbb

tdf#165923 top margin import fixed

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-03-28 09:53:06 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/2b7705dd58679664bf018f87a67cb0b9892b4253

tdf#165923 top margin import fixed

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.