tdf#165923 top margin import fixed

Top paragraph margin needs to be reset to default if not repeated
at the paragraph itself.

Change-Id: I02b92a6893122add3a7aa59d58e0c4fe52aba98a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183390
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>